rename of clientID to registrationID for clarity + env template updates
